--- a/index.html
+++ b/index.html
@@ -4,55 +4,64 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>The Greek Days</title>
+	<meta name="author" content="Petros Amiridis" />
+	<meta name="description" content="How to touch someones's heart with design" />
+	<meta name="keywords"  content="btconf,workshop,design,greek,days" />
 	<meta name="Resource-type" content="Document" />
+
+
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
+	<link rel="stylesheet" type="text/css" href="examples/examples.css" />
 
 	<!--[if IE]>
 		<script type="text/javascript">
-			 var console = { log: function() {} };
+			var console = { log: function() {} };
 		</script>
 	<![endif]-->
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-	<script type="text/javascript" src="jquery.fullPage.min.js"></script>
+	<script type="text/javascript" src="jquery.fullPage.js"></script>
+	<script type="text/javascript" src="examples/examples.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
-				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE'],
+				anchors: ['welcome', 'childhood', 'bbs', 'city', 'logismos', 'thanks'],
+				sectionsColor: ['#ffffff'],
+				navigation: true,
+				navigationPosition: 'right',
+				navigationTooltips: ['Welcome', 'Your Childhood', 'The BBS years', 'City', 'Logismos', 'Thank you!']
 			});
 		});
 	</script>
-
 </head>
-
 <body>
 
 <div id="fullpage">
-	<div class="section " id="section0">
-		<img width="80%" src="page0.jpg" alt="page0" />
+	<div class="section" id="section0">
+		<img width="60%" src="page0.jpg" alt="Welcome" />
 	</div>
 
-  <div class="section " id="section1">
-    <img width="80%" src="page1.jpg" alt="page1" />
-  </div>
+	<div class="section" id="section1">
+		<img width="50%" src="page1.jpg" alt="Your childhood" />
+	</div>
 
-  <div class="section " id="section2">
-    <img width="80%" src="page2.jpg" alt="page2" />
-  </div>
+	<div class="section" id="section2">
+		<img width="50%" src="page2.jpg" alt="The BBS years" />
+	</div>
 
-  <div class="section " id="section3">
-    <img width="80%" src="page3.jpg" alt="page3" />
-  </div>
+	<div class="section" id="section3">
+		<img width="50%" src="page3.jpg" alt="City" />
+	</div>
 
-  <div class="section " id="section4">
-    <img width="80%" src="page4.jpg" alt="page4" />
-  </div>
+	<div class="section" id="section4">
+		<img width="50%" src="page4.jpg" alt="Logismos" />
+	</div>
 
-  <div class="section " id="section5">
-    <img width="80%" src="page5.jpg" alt="page5" />
-  </div>
+	<div class="section" id="section5">
+		<img width="50%" src="page5.jpg" alt="Thank you!" />
+	</div>
 </div>
 
 </body>
